src/index.css
@import "tailwindcss";

@theme {
  --color-bg: #ffffff;
  --color-section-title: #4f4f4f;
  --color-section-title-bg: #ffffff;
  --color-text: #646464;

  --color-grey-1: #d8d8d8;
  --color-grey-2: #8c8c8c;
  --color-grey-3: #4f4f4f;

  --color-accent-grey: #928a97;
  --color-accent-red: #991d1d;

  /*breakpoints*/
  --breakpoint-phone-sm: 360px;
  --breakpoint-phone-md: 412px;
  --breakpoint-phone-lg: 480px;
  --breakpoint-tablet-sm: 600px;
  --breakpoint-tablet-md: 768px;
  --breakpoint-tablet-lg: 820px;
  --breakpoint-desktop-sm: 1024px;
  --breakpoint-desktop-md: 1280px;
  --breakpoint-desktop-lg: 1440px;
  --breakpoint-desktop-xl: 1728px;
}

/*DARK MODE - doesn't have all the default colors altered, only the ones that need to be changed for better contrast and visibility*/
@media (prefers-color-scheme: dark) {
  :root {
    --color-bg: #646464;
    --color-section-title: #8c8c8c;
    --color-text: #ffffffb1;
    --color-section-title-bg: #4f4f4f;

    --color-grey-3: #ffffffb1;

    --color-accent-red: #632626;
  }
}

#dot-pattern-rect {
  fill: url(#dot-pattern);
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 300;
  src: url("/fonts/Raleway-Light.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 400;
  src: url("/fonts/Raleway-Regular.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 500;
  src: url("/fonts/Raleway-Medium.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 600;
  src: url("/fonts/Raleway-SemiBold.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 700;
  src: url("/fonts/Raleway-Bold.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 800;
  src: url("/fonts/Raleway-ExtraBold.woff2") format("woff2");
}

:root {
  --vh: 1vh;
  /*div = divider*/
  --hero-div-top: 120px;
  --hero-div-height: 72px;
  --hero-div-w: 2px;
  --hero-mt: 0px;

  --h1-size: clamp(48px, calc(20vw - 24px), 96px);
  --name-year-size: 1.5rem;

  --section-title-size: clamp(24px, calc(10vw - 12px), 36px);
  --section-top-div-top: 18px;
  --section-top-div-height: 64px;
  --section-bot-div-height: 88px;
  --section-bot-div-top: 148px;

  --block-div-top: 104px;
  --block-div-2xs-h: 254px;
  --block-div-xs-h: 280px;
  --block-div-sm-h: 332px;
  --block-div-md-h: 230px;
  --block-div-lg-h: 288px;
  --block-div-xl-h: 264px;

  --weather-screen-div-top: 452px;
  --weather-screen-div-height: 540px;

  --shelter-screen-div-top: 380px;
  --shelter-screen-div-height: 496px;

  --portfolio-screen-div-top: 384px;
  --portfolio-screen-div-height: 1058px;

  --contacts-div-bot-top: 52px;
  --contacts-div-bot-height: 550px;
}

#dot-pattern-svg {
  display: block;
}

#dot-pattern-svg-xl {
  display: none;
}

@media (min-width: 360px) {
  :root {
    --section-top-div-top: 16px;
    --section-bot-div-height: 124px;
    --section-top-div-height: 106px;
    --section-bot-div-top: 186px;

    --hero-div-height: clamp(112px, calc(104vh - 512px), 164px);

    --block-div-xs-h: 332px;
    --block-div-md-h: 218px;
    --block-div-lg-h: 246px;
    --block-div-xl-h: 332px;

    --weather-screen-div-top: 374px;
    --weather-screen-div-height: 1016px;

    --shelter-screen-div-top: 350px;
    --shelter-screen-div-height: 1044px;
  }
}

@media (min-width: 375px) {
  :root {
    --hero-div-height: clamp(112px, calc(60vh - 248px), 280px);

    --block-div-2xs-h: 246px;

    --section-top-div-height: 92px;
    --section-bot-div-top: clamp(176px, calc(2.667px + 28.889vh), 228px);
    --section-bot-div-height: clamp(114px, calc(-25.2px + 23.2vh), 172px);
  }
}

@media (min-width: 390px) {
  :root {
    --hero-div-top: 164px;
    --hero-mt: 40px;

    --section-top-div-height: 132px;
    --section-bot-div-top: 222px;
  }
}

@media (min-width: 412px) {
  :root {
    --block-div-2xs-h: 282px;
    --block-div-xs-h: 368px;
    --block-div-md-h: 284px;
    --block-div-lg-h: 282px;

    --section-bot-div-height: 188px;

    --shelter-screen-div-top: 416px;
    --shelter-screen-div-height: 1018px;

    --weather-screen-div-top: 416px;
    --weather-screen-div-height: 1026px;

    --portfolio-screen-div-height: 1074px;
    --portfolio-screen-div-top: 424px;

    --contacts-div-bot-height: 572px;

    --name-year-size: 1.875rem;
  }
}

@media (min-width: 428px) {
  :root {
    --hero-div-height: clamp(180px, calc(500vh - 4120px), 280px);

    --block-div-top: clamp(104px, calc(-240px + 40vh), 112px);
    --block-div-2xs-h: 274px;
    --block-div-md-h: 272px;
    --block-div-lg-h: 272px;

    --section-bot-div-top: 230px;
  }
}

@media (min-width: 480px) {
  :root {
    --hero-div-top: 184px;
    --hero-mt: clamp(40px, calc(-515.692px + 64.615vh), 208px);
    --name-year-size: 2.25rem;

    --section-top-div-height: 124px;
    --section-bot-div-top: clamp(228px, calc(-116px + 40vh), 244px);
    --section-bot-div-height: 184px;

    --block-div-top: 112px;
    --block-div-sm-h: 372px;
    --block-div-md-h: 246px;
    --block-div-lg-h: 280px;
    --block-div-xl-h: clamp(332px, calc(-1775px + 245vh), 430px);

    --shelter-screen-div-height: 1088px;
    --shelter-screen-div-top: 386px;

    --weather-screen-div-top: 416px;
    --weather-screen-div-height: 1104px;

    --portfolio-screen-div-height: 1114px;
  }
}

/*600-820PX: TABLETS*/
@media (min-width: 600px) {
  :root {
    --hero-div-height: clamp(148px, calc(23.18vh - 60.62px), 200px);
    --hero-div-top: 36px;
    --hero-div-w: 3px;
    --hero-mt: 140px;

    --block-div-2xs-h: 262px;
    --block-div-xs-h: 324px;
    --block-div-sm-h: 312px;
    --block-div-md-h: 230px;
    --block-div-lg-h: 260px;
    --block-div-xl-h: 430px;

    --shelter-screen-div-top: 372px;
    --shelter-screen-div-height: 1216px;

    --weather-screen-div-top: 400px;
    --weather-screen-div-height: 1256px;

    --portfolio-screen-div-top: 400px;
    --portfolio-screen-div-height: 1230px;

    --section-bot-div-top: clamp(244px, calc(-34.182px + 30.909vh), 312px);
    --section-top-div-height: 136px;

    --contacts-div-bot-height: 520px;
    --contacts-div-bot-top: 76px;
  }
}

@media (min-width: 768px) {
  :root {
    --block-div-top: 120px;
    --block-div-2xs-h: 230px;
    --block-div-xs-h: 252px;
    --block-div-sm-h: 248px;
    --block-div-md-h: 198px;
    --block-div-lg-h: 230px;

    --section-top-div-height: 146px;
    --section-bot-div-height: 204px;

    --contacts-div-bot-height: 540px;

    --name-year-size: 3rem;
    --hero-mt: 164px;

    --shelter-screen-div-top: 352px;
    --shelter-screen-div-height: 1320px;

    --weather-screen-div-top: 380px;
    --weather-screen-div-height: 1368px;

    --portfolio-screen-div-top: 378px;
    --portfolio-screen-div-height: 1246px;
  }
}

@media (min-width: 820px) {
  :root {
    --hero-div-height: clamp(168px, calc(8vh + 162.24px), 200px);
    --hero-mt: 198px;

    --block-div-md-h: 198px;

    --section-top-div-height: clamp(136px, calc(78.4px + 8vh), 168px);
    --section-bot-div-top: clamp(280px, calc(222.4px + 8vh), 312px);
    --section-bot-div-height: clamp(188px, calc(137.6px + 7vh), 216px);

    --weather-screen-div-height: 1338px;
    --shelter-screen-div-height: 1292px;
    --portfolio-screen-div-height: 1214px;

    --h1-size: clamp(96px, calc(-128px + 22.857vw), 128px);
  }
}

/*DESKTOPS*/
@media (min-width: 1024px) {
  #dot-pattern-rect {
    fill: url(#dot-pattern-lg);
  }

  :root {
    --hero-div-height: 168px;
    --hero-div-2-top: 360px;
    --hero-div-2-height: 312px;
    --hero-mt: 0px;

    --block-div-top: 124px;
    --block-div-2xs-h: 714px;
    --block-div-xs-h: 332px;
    --block-div-sm-h: 276px;
    --block-div-md-h: 672px;
    --block-div-lg-h: 736px;

    --contacts-div-bot-top: 80px;
    --contacts-div-bot-height: 340px;

    --name-year-size: 3rem;

    .section-vh {
      min-height: calc(var(--vh, 1vh) * 70);
      min-height: 70dvh;
    }
  }
}

@media (min-width: 1280px) {
  :root {
    --hero-div-height: 184px;
    --hero-div-2-top: 374px;

    --section-top-div-height: clamp(136px, calc(-69.714px + 28.571vh), 216px);
    --section-bot-div-height: clamp(188px, calc(-28px + 30vh), 272px);
    --section-bot-div-top: clamp(280px, calc(-52.308px + 46.154vh), 400px);

    --block-div-2xs-h: 570px;
    --block-div-md-h: 552px;
    --block-div-lg-h: 558px;
    --name-year-size: 3rem;
  }
}

@media (min-width: 1440px) {
  :root {
    --hero-div-height: 212px;
    --hero-div-2-top: 420px;
    --hero-div-2-height: 372px;
    --hero-mt: 16px;

    --block-div-2xs-h: 616px;
    --block-div-md-h: 616px;
    --block-div-lg-h: 570px;
  }

  #dot-pattern-svg {
    display: none;
  }
  #dot-pattern-svg-xl {
    display: block;
  }
}

@media (min-width: 1728px) {
  :root {
    --hero-div-2-height: 552px;

    --block-div-top: 134px;
    --block-div-2xs-h: 814px;
    --block-div-xs-h: 374px;
    --block-div-sm-h: 344px;
    --block-div-md-h: 762px;
    --block-div-lg-h: 724px;

    --section-bot-div-height: 272px;
    --section-top-div-height: clamp(188px, calc(-1184px + 140vh), 216px);

    --contacts-div-bot-height: 420px;

    --name-year-size: 3.75rem;
  }
}

.app-fullscreen {
  min-height: calc(var(--vh) * 100); /* JS fallback */
  min-height: 100dvh;
  padding-bottom: env(safe-area-inset-bottom);
}

.section-vh {
  min-height: calc(var(--vh, 1vh) * 50);
  min-height: 50dvh;
}

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

body {
  font-family:
    "Raleway",
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  position: relative;
}

html,
body,
:root {
  height: 100%;
}

.circle-drop {
  animation: dropBounce 800ms ease-out forwards;
  animation-fill-mode: both;
}

@keyframes dropBounce {
  0% {
    opacity: 0;
    transform: translateY(-96px);
  }
  5% {
    opacity: 1;
  }
  60% {
    transform: translateY(0);
  }
  70% {
    transform: translateY(-16px);
  }
  85% {
    transform: translateY(0);
  }
  92% {
    transform: translateY(-5px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

